@@ -1,3 +1,4 @@
+ - Add timed VTK output for Mesh and MeshFunction in addtion to Functions
  - Expose ufc::dofmap::tabulate_entity_dofs to GenericDofMap interface
  - Expose ufc::dofmap::num_entity_dofs to GenericDofMap interface
  - Allow setting of row dof coordinates in preconditioners (only works with PETSc backed for now)
